name:                 Haskell-Chat-Server
version:              0.1.0.0
synopsis:
-- description:
-- license:
-- license-file:
homepage:
author:               ashwathsalimath
maintainer:           ashwaths99@gmail.com
category:
-- copyright:
build-type:           Simple
-- extra-source-files:
cabal-version:        >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Server, Semaphore
  build-depends:       base >= 4.7 && < 5, network, split, directory, iproute, hashtables, MissingH, template-haskell
                       , random
                       , containers
                       , hashable
                       , mtl
                       , lens
  default-language:    Haskell2010


executable haskell-chat-server-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base, network, parallel-io, split, hashtables
                     , Haskell-Chat-Server
                     , template-haskell
                     , random
                     , containers
                     , hashable
                     , mtl
                     , lens
  default-language:    Haskell2010